alignment fixes

--- a/girleffect/static_src/site/patterns/00-atoms/body-text/_body-text.scss
+++ b/girleffect/static_src/site/patterns/00-atoms/body-text/_body-text.scss
@@ -1,5 +1,6 @@
 .body-text-container {
     @include background-container;
+    margin-bottom: .5rem;
 }
 
 .body-text {
