--- a/girleffect/static_src/site/patterns/00-atoms/brand-pattern/_brand-pattern.scss
+++ b/girleffect/static_src/site/patterns/00-atoms/brand-pattern/_brand-pattern.scss
@@ -29,3 +29,8 @@
     background-image: url('../images/springster-pattern.png');
   }
 }
+@media (min-width: 2000px) {
+  .brand-pattern {
+    background-size: contain;
+  }
+}
