--- a/girleffect/static_src/site/patterns/00-atoms/large-text/_large-text.scss
+++ b/girleffect/static_src/site/patterns/00-atoms/large-text/_large-text.scss
@@ -1,5 +1,6 @@
 .large-text-container {
     @include background-container;
+    margin-bottom: 0.5rem;
 }
 
 .large-text {
