--- a/girleffect/static_src/site/patterns/02-organisms/quote/quote.scss
+++ b/girleffect/static_src/site/patterns/02-organisms/quote/quote.scss
@@ -12,7 +12,9 @@
 
     width: 100%;
     height: 320px;
-    align-self: stretch;
+    align-items: center;
+    display: flex;
+    justify-content: center;
     position: relative;
     margin-bottom: 1rem;
     overflow: hidden;
@@ -179,6 +181,7 @@
     }
 
     img {
+        flex: none;
         max-width: inherit;
         height: auto;
         width: auto;
@@ -190,6 +193,10 @@
             margin-top: 0;
             margin-left: 0;
             transform: translate(0, 0);
+        }
+
+        @include media-query(tablet-portrait) {
+            height: 100%;
         }
     }
 }
