--- a/girleffect/static_src/site/patterns/02-organisms/video/_video.scss
+++ b/girleffect/static_src/site/patterns/02-organisms/video/_video.scss
@@ -1,6 +1,6 @@
 .video-container {
     @include mid-container;
-    padding: 5rem 0;
+    padding: 3rem 0 5rem;
 }
 
 .video {
