--- a/girleffect/static_src/site/sass/abstracts/_mixins.scss
+++ b/girleffect/static_src/site/sass/abstracts/_mixins.scss
@@ -158,11 +158,11 @@
 
 @mixin background-container {
     margin-bottom: 1rem;
-    padding: 2rem 0;
+    padding: 1rem 0;
     background-size: cover;
     background-position: 50% 50%;
 
     @include media-query(tablet-portrait) {
-        padding: 3rem 0;
+        padding: 2rem 0;
     }
 }
